--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "deploy": "npm run build && wrangler pages deploy",
     "deploy:vercel": "vercel --prod",
-    "build": "npx remix vite:build",
+    "build": "remix vite:build",
     "build:vercel": "remix vite:build --config vite.vercel.config.ts",
     "dev": "node pre-start.cjs  && remix vite:dev",
     "dev:vercel": "remix vite:dev --config vite.vercel.config.ts",
@@ -97,10 +97,11 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@remix-run/cloudflare": "^2.15.2",
-    "@remix-run/cloudflare-pages": "^2.15.2",
-    "@remix-run/node": "^2.15.2",
-    "@remix-run/react": "^2.15.2",
+    "@remix-run/cloudflare": "^2.17.1",
+    "@remix-run/cloudflare-pages": "^2.17.1",
+    "@remix-run/dev": "^2.17.1",
+    "@remix-run/node": "^2.17.1",
+    "@remix-run/react": "^2.17.1",
     "@remix-run/vercel": "^1.19.3",
     "@tanstack/react-virtual": "^3.13.0",
     "@types/react-beautiful-dnd": "^13.1.8",
@@ -169,8 +170,7 @@
     "@electron/notarize": "^2.5.0",
     "@iconify-json/ph": "^1.2.1",
     "@iconify/types": "^2.0.0",
-    "@remix-run/dev": "^2.15.2",
-    "@remix-run/serve": "^2.15.2",
+    "@remix-run/serve": "^2.17.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/diff": "^5.2.3",
