--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "@remix-run/cloudflare": "^2.17.1",
     "@remix-run/cloudflare-pages": "^2.17.1",
     "@remix-run/dev": "^2.17.1",
+    "@remix-run/netlify": "^1.19.3",
     "@remix-run/node": "^2.17.1",
     "@remix-run/react": "^2.17.1",
     "@remix-run/vercel": "^1.19.3",
