Fix Netlify function configuration
- Added ts-ignore for build import
- Updated netlify.toml with proper function directory
- Added force redirect flag

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,19 @@
 [build]
   command = "pnpm run build"
   publish = "build/client"
+  functions = "netlify/functions"
 
 [[redirects]]
   from = "/*"
   to = "/.netlify/functions/server"
   status = 200
+  force = true
 
 [functions]
-  directory = "netlify/functions"
   node_bundler = "esbuild"
+
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
