--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,11 @@
 [build]
-  command = "pnpm run build"
+  command = "NODE_OPTIONS='--max-old-space-size=4096' pnpm run build"
   publish = "build/client"
   functions = "netlify/functions"
+
+[build.environment]
+  NODE_VERSION = "20"
+  NPM_FLAGS = "--legacy-peer-deps"
 
 [[redirects]]
   from = "/*"
