--- a/package.json
+++ b/package.json
@@ -100,7 +100,6 @@
     "@remix-run/cloudflare": "^2.17.1",
     "@remix-run/cloudflare-pages": "^2.17.1",
     "@remix-run/dev": "^2.17.1",
-    "@remix-run/netlify": "^1.19.3",
     "@remix-run/node": "^2.17.1",
     "@remix-run/react": "^2.17.1",
     "@remix-run/vercel": "^1.19.3",
@@ -178,6 +177,7 @@
     "@electron/notarize": "^2.5.0",
     "@iconify-json/ph": "^1.2.1",
     "@iconify/types": "^2.0.0",
+    "@netlify/remix-adapter": "^2.6.1",
     "@remix-run/serve": "^2.17.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
