--- a/netlify.toml
+++ b/netlify.toml
@@ -1,20 +1,14 @@
 [build]
   command = "NODE_OPTIONS='--max-old-space-size=4096' pnpm run build"
   publish = "build/client"
-  functions = "netlify/functions"
 
 [build.environment]
   NODE_VERSION = "20"
   NPM_FLAGS = "--legacy-peer-deps"
 
-[[redirects]]
-  from = "/*"
-  to = "/.netlify/functions/server"
-  status = 200
-  force = true
-
-[functions]
-  node_bundler = "esbuild"
+[[edge_functions]]
+  function = "server"
+  path = "/*"
 
 [[headers]]
   for = "/*"
