--- a/package.json
+++ b/package.json
@@ -178,6 +178,7 @@
     "@iconify-json/ph": "^1.2.1",
     "@iconify/types": "^2.0.0",
     "@netlify/remix-adapter": "^2.6.1",
+    "@netlify/remix-edge-adapter": "^3.4.3",
     "@remix-run/serve": "^2.17.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
